LB-3506 added collectionview compability

--- a/Depo/Depo/Presentation/UserStories/Others/InstaPickDetailViewController/InstaPickDetailViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/InstaPickDetailViewController/InstaPickDetailViewController.xib
@@ -21,16 +21,10 @@
                 <outlet property="leftButton" destination="7KG-4Z-wzW" id="ynT-aF-Ulh"/>
                 <outlet property="rightButton" destination="M8a-dX-BWE" id="YLv-2j-Fdq"/>
                 <outlet property="shareButton" destination="h6o-kD-Nrz" id="IZ8-t8-33s"/>
-                <outlet property="smallPhotosStackView" destination="jtO-kl-uZE" id="P0a-B5-REU"/>
+                <outlet property="smallPhotosCollectionView" destination="NYf-dS-Rd1" id="0y8-74-dyR"/>
                 <outlet property="topLabel" destination="IDk-eY-3Lm" id="hkp-a7-h9u"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outletCollection property="instaPickPhotoViews" destination="xHE-Hs-2sD" collectionClass="NSMutableArray" id="Cow-00-D5J"/>
                 <outletCollection property="instaPickPhotoViews" destination="Ynk-f5-yeT" collectionClass="NSMutableArray" id="2Xd-D5-sZ0"/>
-                <outletCollection property="instaPickPhotoViews" destination="iax-U1-9TV" collectionClass="NSMutableArray" id="6pX-Qn-lcu"/>
-                <outletCollection property="instaPickPhotoViews" destination="QD4-Gc-Iaq" collectionClass="NSMutableArray" id="6L1-Pn-fGt"/>
-                <outletCollection property="instaPickPhotoViews" destination="6H1-i6-G1u" collectionClass="NSMutableArray" id="FhM-xh-jNM"/>
-                <outletCollection property="instaPickPhotoViews" destination="Pzi-d4-wuC" collectionClass="NSMutableArray" id="cbv-Jc-DZh"/>
-                <outletCollection property="instaPickPhotoViews" destination="O1a-GS-PDM" collectionClass="NSMutableArray" id="tgm-mF-SMg"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -39,7 +33,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="865-st-OA2" userLabel="Container">
-                    <rect key="frame" x="12" y="120" width="351" height="549"/>
+                    <rect key="frame" x="12" y="115" width="351" height="554"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pan-JD-bOc" userLabel="Close">
                             <rect key="frame" x="311" y="16" width="24" height="24"/>
@@ -53,7 +47,7 @@
                             </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="8IQ-Xh-On3">
-                            <rect key="frame" x="0.0" y="40" width="351" height="390"/>
+                            <rect key="frame" x="0.0" y="40" width="351" height="395"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="rkL-Va-2cx" userLabel="Labels">
                                     <rect key="frame" x="0.0" y="0.0" width="351" height="16"/>
@@ -73,7 +67,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="qu6-0Y-2aS">
-                                    <rect key="frame" x="0.0" y="32" width="351" height="225"/>
+                                    <rect key="frame" x="0.0" y="32" width="351" height="234"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="bigView" translatesAutoresizingMaskIntoConstraints="NO" id="Ynk-f5-yeT" customClass="InstaPickBigPhotoView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="95.5" y="0.0" width="160" height="160"/>
@@ -83,53 +77,30 @@
                                                 <constraint firstAttribute="height" constant="160" id="Rcf-Ye-OA0"/>
                                             </constraints>
                                         </view>
-                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jtO-kl-uZE">
-                                            <rect key="frame" x="59.5" y="193" width="232" height="32"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallOne" translatesAutoresizingMaskIntoConstraints="NO" id="6H1-i6-G1u" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="32" id="xnc-9I-7fu"/>
-                                                        <constraint firstAttribute="width" constant="32" id="z4b-Nr-QhT"/>
-                                                    </constraints>
-                                                </view>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallTwo" translatesAutoresizingMaskIntoConstraints="NO" id="xHE-Hs-2sD" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="40" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallThree" translatesAutoresizingMaskIntoConstraints="NO" id="QD4-Gc-Iaq" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="80" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallFour" translatesAutoresizingMaskIntoConstraints="NO" id="iax-U1-9TV" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="120" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallFive" translatesAutoresizingMaskIntoConstraints="NO" id="Pzi-d4-wuC" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="160" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                </view>
-                                                <view contentMode="scaleToFill" restorationIdentifier="smallSix" translatesAutoresizingMaskIntoConstraints="NO" id="O1a-GS-PDM" customClass="InstaPickSmallPhotoView" customModule="Billo" customModuleProvider="target">
-                                                    <rect key="frame" x="200" y="0.0" width="32" height="32"/>
-                                                    <color key="backgroundColor" name="secondaryBackground"/>
-                                                </view>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="NYf-dS-Rd1" userLabel="smallPhotos Collection View">
+                                            <rect key="frame" x="55.5" y="193" width="240" height="41"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="32" id="g5Y-4F-FEZ"/>
+                                                <constraint firstAttribute="width" constant="240" id="8Uu-FG-Grq"/>
+                                                <constraint firstAttribute="height" constant="41" id="j7b-Tb-1BD"/>
                                             </constraints>
-                                        </stackView>
+                                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nZ8-45-oKd">
+                                                <size key="itemSize" width="128" height="128"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                        </collectionView>
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="HashTag" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EU4-bu-mbr">
-                                    <rect key="frame" x="0.0" y="273" width="351" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="282" width="351" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxe-fz-Gth">
-                                    <rect key="frame" x="0.0" y="289" width="351" height="80"/>
+                                    <rect key="frame" x="0.0" y="298" width="351" height="80"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ppL-32-kIs" userLabel="ShadowHashTags">
                                             <rect key="frame" x="16" y="0.0" width="319" height="80"/>
@@ -162,7 +133,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5GN-cn-ujP" userLabel="Copy">
-                                    <rect key="frame" x="0.0" y="385" width="351" height="5"/>
+                                    <rect key="frame" x="0.0" y="394" width="351" height="1"/>
                                     <state key="normal" title="Button"/>
                                     <connections>
                                         <action selector="onCopyToClipboardTap:" destination="-1" eventType="touchUpInside" id="vt7-8I-8s1"/>
@@ -171,7 +142,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6o-kD-Nrz" userLabel="Share" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="58" y="463" width="235" height="46"/>
+                            <rect key="frame" x="58" y="468" width="235" height="46"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="46" id="n7N-Wy-GFN">
                                     <variation key="heightClass=regular-widthClass=regular" constant="57"/>
@@ -183,7 +154,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7KG-4Z-wzW" userLabel="LeftButton">
-                            <rect key="frame" x="25" y="269" width="24" height="24"/>
+                            <rect key="frame" x="25" y="273.5" width="24" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="6MN-qW-dyr"/>
                                 <constraint firstAttribute="width" constant="24" id="D10-KB-zSV"/>
@@ -195,7 +166,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M8a-dX-BWE" userLabel="RightButton">
-                            <rect key="frame" x="302" y="269" width="24" height="24"/>
+                            <rect key="frame" x="302" y="273.5" width="24" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="24" id="kEY-nn-mci"/>
                                 <constraint firstAttribute="height" constant="24" id="wAS-HZ-fj0"/>
@@ -222,7 +193,7 @@
                         <constraint firstItem="7KG-4Z-wzW" firstAttribute="centerY" secondItem="M8a-dX-BWE" secondAttribute="centerY" id="Z8X-wK-sT5"/>
                         <constraint firstAttribute="trailing" secondItem="pan-JD-bOc" secondAttribute="trailing" constant="16" id="ZMJ-Y6-HcG"/>
                         <constraint firstItem="pan-JD-bOc" firstAttribute="top" secondItem="865-st-OA2" secondAttribute="top" constant="16" id="hqZ-NM-EaX"/>
-                        <constraint firstItem="M8a-dX-BWE" firstAttribute="centerY" secondItem="jtO-kl-uZE" secondAttribute="centerY" id="jaY-gC-gv7"/>
+                        <constraint firstItem="7KG-4Z-wzW" firstAttribute="centerY" secondItem="NYf-dS-Rd1" secondAttribute="centerY" id="kqd-no-YRI"/>
                         <constraint firstAttribute="trailing" secondItem="h6o-kD-Nrz" secondAttribute="trailing" constant="58" id="poE-sQ-tF0"/>
                         <constraint firstItem="M8a-dX-BWE" firstAttribute="trailing" secondItem="8IQ-Xh-On3" secondAttribute="trailing" constant="-25" id="zex-jX-hTO"/>
                     </constraints>
@@ -237,7 +208,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="865-st-OA2" secondAttribute="trailing" constant="12" id="Pvh-m6-Tp2"/>
                 <constraint firstItem="865-st-OA2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="12" id="cij-7i-tZe"/>
                 <constraint firstAttribute="bottom" secondItem="865-st-OA2" secondAttribute="bottom" id="fBw-y6-rLf"/>
-                <constraint firstItem="865-st-OA2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="u4d-q0-paQ"/>
+                <constraint firstItem="865-st-OA2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="115" id="u4d-q0-paQ"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="135.9375" y="194.8943661971831"/>
